src/renderer/overrides.css
/*
 Styles that override default css rules of third party components.
 Prefer custom views when possible, to avoid inflating this file.
*/

/* react-color */

.chrome-picker,
.photoshop-picker {
  @apply text-foreground! bg-transparent! shadow-none!;
  font-family: inherit !important;

  div {
    @apply text-foreground! border-0!;
  }

  svg {
    @apply fill-foreground! bg-transparent!;
    display: initial;
  }

  input {
    @apply text-foreground! border-0! shadow-none!;
  }
}

.photoshop-picker {
  label {
    font-size: 12px !important;
    line-height: 12px !important;
    width: 20% !important;
    top: 5px !important;
  }

  >div {
    @apply bg-transparent! p-0!;
  }

  >div:last-child>div:last-child>div:last-child>div:last-child {

    >div:nth-child(1),
    >div:nth-child(2) {
      display: none !important;
    }

    >div:nth-child(3) {
      @apply bg-primary!;
      padding-top: 9px !important;
      width: 120px !important;
      >div:last-child {
        right: 5px !important;
        top: 7px !important;

        div {
          margin-bottom: 2px;
        }
      }
    }
  }

  input {
    width: 70% !important;
    margin-left: 30px !important;
  }

  >div:first-of-type {
    display: none;
  }
}

/* cmdk */

/* https://github.com/pacocoursey/cmdk/issues/261 */
[cmdk-group-heading] {
  @apply p-2 text-foreground-muted uppercase font-bold text-2xs;
}

/* codemirror */

.CodeMirror-selected {
  @apply bg-overlay!;
}

.CodeMirror-cursor {
  border-left: 1px solid var(--foreground-default) !important;
  height: 16px !important;
}

.CodeMirror-matchingbracket {
  @apply bg-overlay!;
  text-decoration: none !important;
}

.CodeMirror-wrap {
  @apply p-0 text-xs;

  pre {
    word-break: break-word !important;
  }
}

.CodeMirror-gutters {
  @apply bg-secondary!;
}

.CodeMirror-placeholder {
  @apply text-foreground-disabled! font-sans!;
}

.CodeMirror {
  @apply font-mono h-auto z-0 bg-transparent!;
}

.CodeMirror-sizer {
  min-height: initial !important;
}

.CodeMirror-lines {
  @apply p-0;
}

.CodeMirror-scroll {
  @apply overflow-hidden!;
}

/* react-timeline-editor */

.timeline-editor {
  @apply bg-primary! w-full! min-h-0! h-full! text-foreground-muted!;
  font-family: inherit !important;
 }

 .timeline-editor-action {
  @apply bg-overlay! flex! justify-around! items-center! pointer-events-none!;

  &-selected {
    @apply border border-accent;
    .timeline-editor-action-left-stretch::after {
      @apply border-l-accent!;
    }
    .timeline-editor-action-right-stretch::after {
      @apply border-r-accent!;
    }
  }
}

.timeline-editor-time-area .ReactVirtualized__Grid {
  overflow: hidden !important;
}

.timeline-editor-cursor {
  @apply border-accent!;
}

.timeline-editor-cursor-top path {
  @apply fill-accent!;
}

.timeline-editor-time-unit {
  @apply border-border!;
}

.timeline-editor-time-unit-scale {
  @apply text-foreground-muted!;
}

.timeline-editor-edit-row {
  background-image: linear-gradient(var(--primary), var(--primary)),
                    linear-gradient(90deg, var(--border) 1px, transparent 0) !important;
}

/* react-d3-tree */

.rd3t-link {
  @apply stroke-3 stroke-border!;
}

.rd3t-label__title {
  @apply fill-inherit! font-normal!;
}

/* devtools */

.devtools * {
  background: transparent !important;
}

